k8s-data-services/k8s/compute/03-spark-driver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-pi
  namespace: compute
  labels:
    app: spark-pi
spec:
  serviceAccountName: spark
  restartPolicy: Never
  volumes:
    - name: spark-logs
      persistentVolumeClaim:
        claimName: spark-pvc
  containers:
    - name: spark
      image: apache/spark:3.5.3
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /opt/spark/work-dir/logs
          name: spark-logs
      command:
        - /bin/bash
        - -c
        - |
          /opt/spark/bin/spark-submit \
            --master k8s://https://kubernetes.default.svc \
            --deploy-mode cluster \
            --name spark-pi \
            --class org.apache.spark.examples.SparkPi \
            --conf spark.kubernetes.namespace=spark \
            --conf spark.kubernetes.authenticate.driver.serviceAccountName=spark \
            --conf spark.kubernetes.container.image=apache/spark:3.5.3 \
            --conf spark.eventLog.enabled=true \
            --conf spark.eventLog.dir=file:///opt/spark/work-dir/logs \
            --conf spark.kubernetes.driver.pod.name=spark-pi \
            local:///opt/spark/examples/jars/spark-examples_2.12-3.5.3.jar \
            1000
      ports:
        - name: ui
          containerPort: 4040
