k8s-data-services/k8s/compute/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: compute
spec:
  selector:
    matchLabels: &id001
      app: spark-master
      role: master
  template:
    metadata:
      labels: *id001
    spec:
      containers:
      - name: spark-master
        image: spark:3.5.6-scala2.12-java11-python3-r-ubuntu
        ports:
        - containerPort: 7077
        - containerPort: 8080
        volumeMounts:
        - name: spark-defaults
          mountPath: /opt/spark/conf
        args:
        - /opt/spark/sbin/start-master.sh
      volumes:
      - name: spark-defaults
        configMap:
          name: spark-defaults
  replicas: 1
