k8s-data-services/k8s/compute/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: compute
spec:
  selector:
    matchLabels: &id001
      app: spark-worker
      role: worker
  template:
    metadata:
      labels: *id001
    spec:
      containers:
      - name: spark-worker
        image: spark:3.5.6-scala2.12-java11-python3-r-ubuntu
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: spark-defaults
          mountPath: /opt/spark/conf
        args:
        - /opt/spark/sbin/start-worker.sh
        - spark://spark-master.compute.svc.cluster.local:7077
      volumes:
      - name: spark-defaults
        configMap:
          name: spark-defaults
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: role
                operator: In
                values:
                - worker
            topologyKey: kubernetes.io/hostname
  replicas: 2
