k8s-data-services/k8s/compute/04-spark-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-ui
  namespace: spark
spec:
  type: NodePort
  selector:
    spark-role: driver
  ports:
    - port: 4040
      targetPort: 4040
      nodePort: 30040
