k8s-data-services/k8s/compute/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: compute
spec:
  selector:
    app: spark-master
    role: master
  ports:
  - port: 7077
    targetPort: 7077
    name: rpc
  - port: 8080
    targetPort: 8080
    name: ui
