k8s-data-services/k8s/compute/02-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-egress
  namespace: compute           
spec:
  podSelector: {}              
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.73.0/24
      ports:
        - protocol: TCP
          port: 9092
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
